Fix demo website width on smaller screens

--- a/style.css
+++ b/style.css
@@ -108,9 +108,15 @@ main {
 
 h1 {
   margin-bottom: 1rem;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-family: "dicecube", var(--mono);
   text-align: center;
+}
+
+@media screen and (min-width: 390px) {
+  h1 {
+    font-size: 3rem;
+  }
 }
 
 h1 a,
@@ -165,7 +171,7 @@ p.description a:hover {
 }
 
 .slideshow button {
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
   background: none;
   border: none;
   color: var(--cookies-and-cream);
@@ -208,7 +214,13 @@ input[type="range"] {
   background: transparent;
   cursor: pointer;
 
-  width: 22rem;
+  width: 18rem;
+}
+
+@media screen and (min-width: 390px) {
+  input[type="range"] {
+    width: 22rem;
+  }
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
